1. 补全swagger注释；2.覆盖上报的DiffLines
